<resources>
    <string name="app_name">Bookster</string>
    <string name="hint_login_email">Email</string>
    <string name="hint_login_password">Password</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="content_description_logo">Plane</string>
    <string name="act_main_iv_logo">Bookster</string>
    <string name="act_main_tv_login">Login</string>
    <string name="act_main_btn_login">Login</string>
    <string name="act_main_btn_register">Register</string>
    <string name="act_register_tv_register_client">Register Client</string>
    <string name="act_register_btn_register">Register</string>
    <string name="hint_register_name">Name</string>
    <string name="act_register_tv_register_manager">Register Manager</string>
    <string name="hint_register_business_name">Business Name</string>
    <string name="hint_register_address">Business Address</string>
    <string name="hint_login_number">Phone</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_messages">Messages</string>
    <string name="title_profile">Profile</string>
    <string name="act_register_dialog_title">Creating Account</string>
    <string name="act_register_dialog_message">Loading...</string>
    <string name="act_main_dialog_title">Logging in</string>
    <string name="act_main_dialog_message">Loading...</string>
    <string name="frag_search_TV_destination">Your destination</string>
    <string name="search_title">Type in a location</string>
    <string name="frag_search_SV_hint">Type in a location</string>
    <string name="frag_search_TV_start_date">Start date</string>
    <string name="frag_search_TV_end_date">End date</string>
    <string name="frag_search_IV_content_descr">PersonIcon</string>
    <string name="frag_search_TV_nr_persons">Number of persons</string>
    <string name="frag_search_BTN_search">Search</string>
    <string name="frag_search_ET_date">dd/MM/yyyy</string>
    <string name="frag_search_TV_welcome_user">Welcome</string>
    <string name="frag_listOffers_TV_header">Offers available</string>
    <string name="adapter_listOffer_BTN_view">Show full offer</string>
    <string name="frag_displayOffer_TV_facilities">Most popular facilities</string>
    <string name="frag_displayOffer_TV_availability">Availability</string>
    <string name="frag_displayOffer_TV_check_in">Check-in date</string>
    <string name="frag_displayOffer_TV_check_out">Check-out date</string>
    <string name="frag_displayOffer_TV_guests_title">Guests</string>
    <string name="frag_displayOffer_TV_rooms">Room</string>
    <string name="frag_displayOffer_TV_room_type">Room type</string>
    <string name="frag_displayOffer_TV_room_facilities">Facilities:</string>
    <string name="frag_displayOffer_TV_price_bottom">Price for 1 night</string>
    <string name="frag_displayOffer_TV_price_top">Total price</string>
    <string name="frag_displayOffer_TV_price_per_night_extra">Includes taxes and charges</string>
    <string name="frag_displayOffer_BTN_reserve">Reserve</string>
    <string name="frag_displayOffer_TV_pictures">Pictures</string>
    <string name="frag_listOffers_dialog_message">Filtering for your needs</string>
    <string name="frag_displayOffer_TV_header_distance">See directions</string>
    <string name="frag_home_TV_header">Reservations</string>
    <string name="frag_home_TV_details">Select a reservation to see more details</string>
    <string name="frag_home_dialog_reservations_message">Getting your reservations</string>
    <string name="adapter_listReservation_TV_period_start">Start Date</string>
    <string name="adapter_listReservation_TV_period_end">End Date</string>
    <string name="frag_displayOffer_dialog_message">Making reservation</string>
    <string name="frag_displayOffer_BTN_cancel_reservation">Cancel Reservation</string>
    <string name="frag_displayOffer_BTN_delete_offer">Delete Offer</string>
    <string name="frag_displayOffer_dialog_delete_offer_message">Deleting offer</string>
    <string name="frag_displayOffer_TV_message">Contact manager</string>
    <string name="adapter_listMessage_BTN_mail">Check your emails</string>
    <string name="adapter_listMessages_TV_info">You have received a new message</string>
    <string name="frag_messages_TV_header">Messages</string>
    <string name="frag_messages_TV_details">These are notifications. They will open gmail for you</string>
    <string name="frag_messages_TV_empty">No messages from your clients</string>
    <string name="title_activity_settings">Settings</string>
    <string name="account_header">Account</string>
    <string name="email_title">Email</string>
    <string name="email_summary">Change your email</string>
    <string name="password_title">Password</string>
    <string name="password_summary">Change your password</string>
    <string name="logOut_title">Log Out</string>
    <string name="title_offers">Offers</string>
    <string name="frag_listOffersAdmin_TV_header">Your business offers</string>
    <string name="frag_listOffersAdmin_TV_empty">No offers yet</string>
    <string name="frag_listOffersAdmin_BTN_add">Add</string>
    <string name="frag_addOffer_TV_header">Add Offer</string>
    <string name="hint_add_offer_name">Hotel name</string>
    <string name="hint_add_offer_description">Hotel description</string>
    <string name="hint_add_offer_city_name">City name</string>
    <string name="hint_add_offer_country">Country</string>
    <string name="frag_addOffer_TV_general">General information</string>
    <string name="frag_addOffer_TV_offer">Offer information</string>
    <string name="hint_add_offer_room_description">Room description</string>
    <string name="frag_addOffer_TV_room_available">Nr. of available rooms</string>
    <string name="hint_add_offer_room_size">Size of the room (in squared meters)</string>
    <string name="hint_add_offer_room_price">Price for 1 night (in €)</string>
    <string name="hint_add_offer_room_latitude">Latitude</string>
    <string name="hint_add_offer_room_longitude">Longitude</string>
    <string name="hint_add_offer_room_rating">Rating</string>
    <string name="hint_add_offer_room_facilities">Room facilities (separated by comma)</string>
    <string name="frag_displayOffer_TV_popular_facilities">Popular facilities</string>
    <string name="frag_addOffer_BTN_add_images">Select images</string>
    <string name="frag_addOffer_BTN_submit">Upload Offer</string>
    <string name="frag_addOffer_dialog_message">Saving offer</string>
    <string name="frag_displayOffer_BTN_delete_reservation_manager">Cancel reservation for client</string>
    <string name="frag_displayOffer_dialog_delete_reservation_message">Deleting reservation</string>
    <string name="act_main_TV_LOGO">Bookster</string>
    <string name="frag_home_TV_empty">No reservations made</string>


</resources>
