<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home_user">

    <fragment
        android:id="@+id/navigation_home_user"
        android:name="com.davidmarian_buzatu.bookster.activity.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <argument
            android:name="Type"
            app:argType="string"
            android:defaultValue="Client" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.davidmarian_buzatu.bookster.activity.ui.search.SearchFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_search" >
        <argument
            android:name="Type"
            app:argType="string"
            android:defaultValue="Client"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.davidmarian_buzatu.bookster.activity.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" >
        <argument
            android:name="Type"
            app:argType="string"
            android:defaultValue="Client"/>
    </fragment>
</navigation>
