<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.davidmarian_buzatu.bookster.activity.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <argument
            android:name="Type"
            app:argType="string"
            android:defaultValue="Manager" />
    </fragment>

    <fragment
        android:id="@+id/navigation_offers"
        android:name="com.davidmarian_buzatu.bookster.activity.ui.offers.OffersFragment"
        android:label="@string/title_offers"
        tools:layout="@layout/fragment_offers" >
        <argument
            android:name="Type"
            app:argType="string"
            android:defaultValue="Client"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.davidmarian_buzatu.bookster.activity.ui.messages.MessagesFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_messages">
        <argument
            android:name="Type"
            app:argType="string"
            android:defaultValue="Client"/>
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.davidmarian_buzatu.bookster.activity.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" >
        <argument
            android:name="Type"
            app:argType="string"
            android:defaultValue="Client"/>
    </fragment>
</navigation>
