<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/text_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/frag_search_TV_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/roboto_italic"
        android:textSize="20sp"
        android:text="Welcome, UserX"
        android:layout_marginTop="64dp"
        android:layout_marginStart="24dp"
        />
    <TextView
        android:id="@+id/frag_search_TV_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/frag_search_TV_welcome"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/roboto_bold"
        android:textSize="28sp"
        android:text="Let's Search"
        android:layout_marginStart="24dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/frag_search_CV_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/frag_search_TV_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"

        app:cardCornerRadius="30dp"
        app:cardElevation="8dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/frag_search_LL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="24dp"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_map_marked_alt_solid"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/frag_search_TV_destination"
                        android:textSize="26sp"
                        android:textColor="@color/colorBlack"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="24dp"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="120dp"
                        android:src="@drawable/ic_world"
                        />
                </LinearLayout>

            </LinearLayout>
            <androidx.appcompat.widget.SearchView
                android:id="@+id/frag_search_SV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:queryHint="@string/frag_search_SV_hint"
                app:iconifiedByDefault="false"
                app:queryBackground="@android:color/transparent"
                android:layout_below="@id/frag_search_LL"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    
    <androidx.cardview.widget.CardView
        android:id="@+id/frag_search_CV_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/frag_search_CV_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"

        app:cardCornerRadius="30dp"
        app:cardElevation="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_calendar"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginEnd="2dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="14sp"
                    android:text="@string/frag_search_TV_start_date"
                    />
                <EditText
                    android:id="@+id/frag_search_ET_start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:inputType="date"
                    android:autofillHints="false"
                    android:hint="@string/frag_search_ET_date"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginEnd="2dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="14sp"
                    android:text="@string/frag_search_TV_end_date"
                    />
                <EditText
                    android:id="@+id/frag_search_ET_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:inputType="date"
                    android:autofillHints="false"
                    android:hint="@string/frag_search_ET_date"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/frag_search_CV_persons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/frag_search_CV_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"

        app:cardCornerRadius="30dp"
        app:cardElevation="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_name"
                android:contentDescription="@string/frag_search_IV_content_descr"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="14sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/frag_search_TV_nr_persons"
                    />
           <NumberPicker
               android:id="@+id/frag_search_NP_persons"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_marginStart="12dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/frag_search_CV_persons"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:cornerRadius="18dp"
        android:text="@string/frag_search_BTN_search"
        android:drawableEnd="@drawable/ic_location_arrow_solid"
        />
</androidx.constraintlayout.widget.ConstraintLayout>