<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="@drawable/ic_background">

    <TextView
        android:id="@+id/act_main_TV_Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/act_main_tv_login"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:textSize="32sp"
        android:textColor="@color/colorGray"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/act_main_CV_FormContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"

        app:layout_constraintTop_toBottomOf="@id/act_main_TV_Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        card_view:cardCornerRadius="16dp"
        card_view:cardElevation="8dp">

        <LinearLayout
            android:id="@+id/act_main_LL_CV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/act_main_TIL_email"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="#FFFFFF"
                android:padding="12dp"
                android:textColorHint="#000000"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/error_appearance"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/act_main_TIET_email"
                    style="@style/InputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/hint_login_email" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E4E4E4" />

            <RelativeLayout
                android:id="@+id/act_main_RL_CV_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/act_main_TIL_password"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:background="#FFFFFF"
                    android:padding="12dp"
                    android:textColorHint="#000000"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/error_appearance">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/act_main_TIET_password"
                        style="@style/InputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="12dp"
                        android:ems="10"
                        android:hint="@string/hint_login_password"
                        android:inputType="textPassword"
                        android:maxLength="20" />

                </com.google.android.material.textfield.TextInputLayout>

<!--                <TextView-->
<!--                    android:id="@+id/act_main_TV_ForgotPassword"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_alignParentEnd="true"-->
<!--                    android:layout_centerVertical="true"-->
<!--                    android:layout_marginEnd="32dp"-->
<!--                    android:clickable="true"-->
<!--                    android:focusable="true"-->
<!--                    android:gravity="center"-->
<!--                    android:padding="8dp"-->
<!--                    android:text="@string/act_main_TV_ForgotPassword"-->
<!--                    android:textAlignment="center"-->
<!--                    android:textColor="#6598db" />-->

                <ImageView
                    android:id="@+id/act_main_IV_ShowPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:src="@drawable/ic_baseline_visibility_off_24px"
                    android:textAlignment="center"
                    android:contentDescription="@string/title_activity_forgot_password"/>
            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/act_main_BTN_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/act_main_CV_FormContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/act_main_btn_login"
        android:backgroundTint="@color/colorLogin"
        app:cornerRadius="16dp"
        android:onClick="formSubmit"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/act_main_BTN_Login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/act_main_btn_register"
        android:backgroundTint="@color/colorRegister"
        app:cornerRadius="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>