<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:id="@+id/frag_listOffersAdmin_RL_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:drawableStart="@drawable/ic_holidays"
            android:drawablePadding="12dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/frag_listOffersAdmin_TV_header"
            android:textColor="@color/colorBlackHeader"
            android:textSize="28sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/frag_listOffersAdmin_TV_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/frag_listOffersAdmin_TV_empty"
        android:textColor="@color/colorBlackHeader"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frag_listOffersAdmin_RL_header" />

    <Button
        android:id="@+id/frag_listOffersAdmin_BTN_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/frag_listOffersAdmin_BTN_add"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frag_listOffersAdmin_RL_header" />

    <androidx.cardview.widget.CardView
        android:id="@+id/frag_listOffersAdmin_CV_offers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/colorWhite"
        app:cardCornerRadius="36dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frag_listOffersAdmin_RL_header">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/frag_listOffersAdmin_RV_offers"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>